--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/staff.html
@@ -61,7 +61,7 @@
                 {% endif %} {% endfor %}
               </div>
               <div class="modal-footer">
-                <a href="{% url 'tool'%}"><button type="button" class="btn btn-secondary">Cancel</button></a>
+                <a href="{% url 'update-staff' %}"><button type="button" class="btn btn-secondary">Cancel</button></a>
                 <button id="submit_button" type="submit" class="btn btn-primary">Create Account</button>
               </div>
               
