--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/update-staff.html
@@ -34,9 +34,10 @@
 				<div class="mb-3"><label for="floatingInput4">Username:</label>
 				<input class="form-control form-control-sm" id="floatingInput4" type="text" placeholder="Username" aria-label=".form-control-sm example" name="username">
 				</div>
-		    <button class="btn btn-primary" type="submit">
+			<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+		    <button class="btn btn-outline-primary" type="submit">
 				<i class="fas fa-search"></i>
-				Search</button>
+				Search</button></div>
 		  </form>
 
 		</div>
@@ -75,8 +76,8 @@
 
 			</table>
 					<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-						<a href="{% url 'update-staff' %}"
-						<button class="btn btn-danger">
+						<a href="{% url 'update-staff' %}">
+						<button class="btn btn-outline-danger">
 							<i class="fas fa-times"></i>
 							Clear Search</button></a>
 					</div>
