--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/confirm-appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/confirm-appointment.html
@@ -22,6 +22,7 @@
                 <th scope="col">Location</th>
                 <th scope="col">Status</th>
                 <th scope="col">Confirm</th>
+                <th scope="col">Reject</th>
             </tr>
         </thead>
         <tbody>
@@ -39,6 +40,10 @@
             <td><form action="{% url 'confirm-appointment' appointment.id %}" method="post">
                 {% csrf_token %}
                 <button id="submit_button" type="submit" class="btn btn-primary">Confirm</button>
+            </form></td>
+            <td><form action="{% url 'reject-appointment' appointment.id %}" method="post">
+                {% csrf_token %}
+                <button id="submit_button" type="submit" class="btn btn-secondary">reject</button>
             </form></td>
         </tr>
 
