--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/dashboard.html
@@ -6,7 +6,6 @@
     {% if request.user|has_group:"staff"%}
     <br>
     <a class="btn btn-lg btn-info"  href="{% url 'confirm-appointments' %}" style="color: black">Confirm Appointments</a>
-    {% endif %}
     {% if count == 0 %}
         <div id = "noAppointment">
             <span><i class ="fas fa-calendar-check fa-3x"></i></span>
@@ -89,6 +88,50 @@
         
         </tbody>
         </table>
+        {% endif %}
+        {% endif %}
+        {% if request.user|has_group:"doctor"%}
+        {% if count == 0 %}
+        <div id = "noAppointment">
+            <span><i class ="fas fa-calendar-check fa-3x"></i></span>
+            <h1>No Appointment for Today!</h1>
+        </div>
+        {% else %}
+        <h1>Appointments today:</h1>
+        <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Appointment No#</th>
+                <th scope="col">Patient username</th>
+                <th scope="col">Time of Appointment</th>
+                <th scope="col">Date of Appointment</th>
+                <th scope="col">Doctor Assigned</th>
+                <th scope="col">Type of Visit</th>
+                <th scope="col">Location</th>
+                <th scope="col">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for appointment in appointments %}
+
+        <tr>
+            <td> <a>{{appointment.id}}</a></td>
+            <td> <a>{{appointment.patient_username}}</a></td>
+            <td> <a>{{appointment.time}}</a></td>
+            <td> <a>{{appointment.date}}</a></td>
+            <td> <a>{{appointment.doctor}}</a></td>
+            <td> <a>{{appointment.visit}}</a></td>
+            <td> <a>{{appointment.location}}</a></td>
+            <td> <a href="#" >{{appointment.stat}}</a></td>
+        </tr>
+
+        {% endfor %}
+
+
+        
+        </tbody>
+        </table>
+        {% endif %}
         {% endif %}
 </body>
 
