--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -39,6 +39,7 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Date of Birth</th>
+            <th></th>
         </tr>
         {% for patient in patients %}
         
@@ -47,6 +48,10 @@
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.first_name}}</a></td>
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.last_name}}</a></td>
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
+            <td> <button type="button">
+                <a href="{% url 'send-email-reminder' %}">Send email reminder</a>
+            </button>
+            
         </tr>
         {% endfor %}
     </table>
