--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -32,7 +32,7 @@
     </form>
 
 <div class="row">
-    <table  class="table table-primary table-striped table-bordered table-sm table-hover">
+    <table  class="table table-light table-striped table-bordered table-sm table-hover">
 				
         <tr>
             <th>Record #</th>
@@ -48,15 +48,18 @@
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.first_name}}</a></td>
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.last_name}}</a></td>
             <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
-            <td> <button type="button">
-                <a href="{% url 'send-email-reminder' %}">Send email reminder</a>
+            <td> <form action="{% url 'send-email-reminder' patient.id %}" method="post">
+                {% csrf_token %}
+                <button id="submit_button" type="submit" class="btn btn-sm btn-outline-secondary">
+                Send email reminder
             </button>
+            </form>
             
         </tr>
         {% endfor %}
     </table>
 
-    <table class="table table-primary table-striped table-bordered table-sm table-hover">				
+    <table class="table table-light table-striped table-bordered table-sm table-hover">				
         <tr>
             <th>Vaccine</th>
         </tr>
