modified patient landing page

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-landing.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-landing.html
@@ -17,7 +17,9 @@
         <div class="card border-info" style="margin-left: 5%; margin-right: 5%">
           <h5 class="card-header">Welcome, {{record.first_name}} {{record.last_name}}! </h5>
             <div class="card-body">
-                Hi! This is from the BaQna Clinic of {{ record.doctor_assigned }}, reminding you of your child’s vaccination schedule this {{appt.date}} at {{appt.time}}. Your child is due for [vaccine name].  	
+                Hi! This is from the BaQna Clinic of {{ record.doctor_assigned }}.
+                You may check which vaccine should be booked next for your child's appointment on the vaccine record page.
+                Thank you!  	
             </div>
         </div>
     </div>
