--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/navbar.html
@@ -39,10 +39,17 @@
               
               {% if user.is_authenticated %}
                 <li class = "nav-item">  
+                  {% if request.user|has_group:"staff" or request.user|has_group:"doctor" %}
+                  <a class = "nav-link active" href="{% url 'own-profile'  %}">
+                    <i class="fas fa-user-circle"></i>
+                    {{ user.username }}
+                  </a>
+                  {% else %}
                   <a class = "nav-link active" href="#">
                     <i class="fas fa-user-circle"></i>
                     {{ user.username }}
                   </a>
+                  {% endif %}
                 </li>
                 <li class = "nav-item">  
                   <a class="nav-link active" href="{% url 'logout'%}">
