onting adjustment lang sa htmls

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -18,7 +18,7 @@
                 <div style="width: 70%; margin-left: 15%; margin-right: 15%">
                   <table class="table table-borderless table-md">
                       <tr>
-                        <td>Enter date
+                        <td>Enter Date  
                         <input type="date" id="date" name="date">
                         </td>
                         <td><button id="submit_button" type="submit" class="btn btn-primary">Enter</button></td>
