--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/tool/reminder.html
@@ -1,75 +1,83 @@
 {% extends 'vaccinerecordapp/navbar.html' %} 
 {% block content %} {% load static %} {% load auth_extras %}
 
+<p style="background-color:hsla(198, 13%, 85%, 0.89); padding-left: 1%;">
+    Reminder of Due Vaccines
+  </p>
+
 <div class="col-1">
     {% include 'vaccinerecordapp/staff-navbar.html' %}
   </div>
 <div class="container">
-
-    <form method="post">
-        <div class="modal-body" style="color: black">
-            {% csrf_token %}
-            <center>
-            <br />
-            <h2> Due Vaccines
-            </h2>
-            </center>
-            <br />
-                <div style="width: 70%; margin-left: 15%; margin-right: 15%">
-                  <table class="table table-borderless table-md">
-                      <tr>
-                        <td>Enter Date  
-                        <input type="date" id="date" name="date">
-                        </td>
-                        <td><button id="submit_button" type="submit" class="btn btn-primary">Enter</button></td>
-                      </tr>
-                    </table>
-                    
-                </div> 
-            <div>
-            </div>   
-        </div>
-    </form>
-
-<div class="row">
-    <table  class="table table-light table-striped table-bordered table-sm table-hover">
-				
-        <tr>
-            <th>Record #</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Date of Birth</th>
-            <th></th>
-        </tr>
-        {% for patient in patients %}
-        
-        <tr>
-            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.id}}</a></td>
-            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.first_name}}</a></td>
-            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.last_name}}</a></td>
-            <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
-            <td> <form action="{% url 'send-email-reminder' patient.id %}" method="post">
-                {% csrf_token %}
-                <button id="submit_button" type="submit" class="btn btn-sm btn-outline-secondary">
-                Send email reminder
-            </button>
-            </form>
+    <div class="card border-info" style="margin-left: 3%; margin-right: 3%">
+        <h5 class="card-header" style="font-size: xx-large; text-align: center;">Due Vaccines<br> </h5>
+          <div class="card-body">
             
-        </tr>
-        {% endfor %}
-    </table>
-
-    <table class="table table-light table-striped table-bordered table-sm table-hover">				
-        <tr>
-            <th>Vaccine</th>
-        </tr>
-        {% for vaccine in vaccines %}
+            <form method="post">
+                <div class="modal-body" style="color: black">
+                    {% csrf_token %}
+                    
+                    <br />
+                        <div style="width: 70%; margin-left: 15%; margin-right: 15%">
+                          <table class="table table-borderless table-md">
+                              <tr>
+                                <td style="font-weight: bold; ">Enter Date  
+                                <input type="date" id="date" name="date">
+                                </td>
+                                <td><button id="submit_button" type="submit" class="btn btn-outline-primary" style="width: 100%">Enter</button></td>
+                              </tr>
+                            </table>
+                            
+                        </div> 
+                    <div>
+                    </div>   
+                </div>
+            </form>
         
-        <tr>
-            <td>{{vaccine}}</td>
-        </tr>
-        {% endfor %}
-    </table>
+        <div class="row">
+            <table  class="table table-striped table-hover" style="width: 80%; margin-left: auto; margin-right: auto;">
+                        
+                <tr>
+                    <th>Record #</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Date of Birth</th>
+                    <th></th>
+                </tr>
+                {% for patient in patients %}
+                
+                <tr>
+                    <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.id}}</a></td>
+                    <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.first_name}}</a></td>
+                    <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.last_name}}</a></td>
+                    <td> <a href="{% url 'reminder-vaccines' patient.id %}" >{{patient.bday|date:"m/d/Y"}}</a></td>
+                    <td> <form action="{% url 'send-email-reminder' patient.id %}" method="post">
+                        {% csrf_token %}
+                        <button id="submit_button" type="submit" class="btn btn-sm btn-success" style="margin:auto; display: block;">
+                        Send email reminder
+                    </button>
+                    </form>
+                    
+                </tr>
+                {% endfor %}
+            </table>
+            <br> <br>
+            <table class="table table-striped" style="width: 80%; margin-left: auto; margin-right: auto;">				
+                <tr>
+                    <th>List of Due Vaccines</th>
+                </tr>
+                {% for vaccine in vaccines %}
+                
+                <tr>
+                    <td>{{vaccine | upper}}</td>
+                </tr>
+                {% endfor %}
+            </table>
+
+
+
+          </div>
     </div>
+</div>    
 
 {% endblock %}
