reseched worrking again

--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reschedule-appointment.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/reschedule-appointment.html
@@ -11,7 +11,7 @@
         <center>
             <div class='col-7'>
                     <div class="card w-75 card border-info">
-                        <form method="post" action="{% url 'reschedule-appointment' pk %}"></form>
+                        <form method="post" action="{% url 'reschedule-appointment' pk %}">
                             <div class="card-header">
                                 Reschedule Appointment
                             </div>
