--- a/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
+++ b/VaccineRecord/vaccinerecordapp/templates/vaccinerecordapp/patient-navbar.html
@@ -9,7 +9,7 @@
     {% endif %}
     {% if request.user|has_group:"patient"%}
     <li class="profile">
-      <a class="nav-link active" href="{% url 'update-patient-profile' record.pk %}">Profile</a>
+      <a class="nav-link active" href="{% url 'patient-profile' record.pk %}">Profile</a>
     </li>
     {% endif %}
     <li class="appointment">
